--- a/app/user/templates/login.html
+++ b/app/user/templates/login.html
@@ -5,7 +5,7 @@
 <section class="hero is-fullheight is-justify-content-center">
   <div class="columns is-justify-content-center is-align-items-center">
     <div class="column is-one-quarter">
-      <img class="is-4by5" src="https://source.unsplash.com/400x600/?mobile" alt="">
+      <img class="is-4by5" src="https://source.unsplash.com/z3kBG5xIhjo/400x600" alt="">
     </div>
     <div class="column is-one-quarter">
       <div class="box p-6">
