--- a/app/user/templates/signup.html
+++ b/app/user/templates/signup.html
@@ -36,5 +36,10 @@
       </div>
     </form>
   </div>
+  <div class="box my-2 column is-one-third is-offset-one-third">
+    <p class="is-size-6 has-text-centered">Or, You already have an account. <br>
+      <a href="{{ url_for('user.login') }}" class="has-text-link">Login.</a>
+    </p>
+  </div>
 </section>
 {% endblock body %}
