--- a/app/main/templates/index.html
+++ b/app/main/templates/index.html
@@ -29,7 +29,12 @@
 
                                 <!-- Right side -->
                                 <div class="level-right">
-                                        <p class="level-item"><i class="fas fa-home has-text-link"></i></p>
+                                        <a href="{{ url_for('main.home') }}" class="mx-2">
+                                                <p class="level-item"><i class="fas fa-home has-text-link"></i></p>
+                                        </a>
+                                        <a href="{{ url_for('post.new') }}" class="mx-2">
+                                                <p class="level-item"><i class="fas fa-plus-circle"></i></p>
+                                        </a>
                                 </div>
                         </nav>
                 </div>
