--- a/app/main/templates/index.html
+++ b/app/main/templates/index.html
@@ -1,86 +1,45 @@
-{% from 'macros/form.html' import render_form %}
-{% extends 'layout.html' %}
-
+{% extends 'main.html' %}
 {% block style %}
 {{ super() }}
         <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
         <link rel="stylesheet" href="{{ url_for('main.static', filename='css/swiper.css') }}">
 {% endblock style %}
-
-{% block body %}        
-<section class="has-background-light">
-        <div class="box">
-                <div class="container is-max-widescreen">
-                        <nav class="level">
-                                <!-- Left side -->
-                                <div class="level-left">
-                                        <div class="level-item mr-6">
-                                                <a href="{{ url_for('main.home') }}">
-                                                        <h1 class="title">Instagram Clone</h1>
-                                                </a>
-                                        </div>
-                                        <div class="level-item ml-6">
-                                                <div class="field has-addons">
-                                                        <p class="control">
-                                                        <input class="input" type="text" placeholder="Find a post">
-                                                        </p>
-                                                        <p class="control">
-                                                        <button class="button">
-                                                                Search
-                                                        </button>
-                                                        </p>
+{% block main %}        
+<div class="container is-max-widescreen">
+        <div class="columns">
+                <div class="column is-three-quarters">
+                        {% for post in posts %}
+                        <div class="box my-2">
+                                <div class="swiper-container">
+                                        <div class="swiper-wrapper">
+                                                {% for image in post.images.all() %}
+                                                <div class="swiper-slide swiper-zoom-container">
+                                                        <!-- Required swiper-lazy class and image source specified in data-src attribute -->
+                                                        <img data-src="{{ url_for('post.static', filename='images/'+image.name ) }}" class="swiper-lazy">
+                                                        <!-- Preloader image -->
+                                                        <div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
                                                 </div>
+                                                {% endfor %}
                                         </div>
+                                        <!-- Add Pagination -->
+                                        <div class="swiper-pagination"></div>
+                                        <!-- Navigation -->
+                                        <div class="swiper-button-next"></div>
+                                        <div class="swiper-button-prev"></div>
                                 </div>
-
-                                <!-- Right side -->
-                                <div class="level-right">
-                                        <a href="{{ url_for('main.home') }}" class="mx-2">
-                                                <p class="level-item"><i class="fas fa-home has-text-link"></i></p>
-                                        </a>
-                                        <a href="{{ url_for('post.new') }}" class="mx-2">
-                                                <p class="level-item"><i class="fas fa-plus-circle"></i></p>
-                                        </a>
-                                </div>
-                        </nav>
-                </div>
-        </div>
-        <div class="container is-max-widescreen">
-                <div class="columns">
-                        <div class="column is-three-quarters">
-                                <button class="button is-danger is-outlined is-medium is-fullwidth">Medium</button>
-                                {% for post in posts %}
-                                <div class="box my-2">
-                                        <div class="swiper-container">
-                                                <div class="swiper-wrapper">
-                                                        {% for image in post.images.all() %}
-                                                        <div class="swiper-slide swiper-zoom-container">
-                                                                <!-- Required swiper-lazy class and image source specified in data-src attribute -->
-                                                                <img data-src="{{ url_for('post.static', filename='images/'+image.name ) }}" class="swiper-lazy">
-                                                                <!-- Preloader image -->
-                                                                <div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
-                                                        </div>
-                                                        {% endfor %}
-                                                </div>
-                                                <!-- Add Pagination -->
-                                                <div class="swiper-pagination"></div>
-                                                <!-- Navigation -->
-                                                <div class="swiper-button-next"></div>
-                                                <div class="swiper-button-prev"></div>
-                                        </div>
-                                        <button class="button m-2 {% if current_user not in post.user_liked %}is-dark{% else %}is-danger{% endif %} is-inverted" onclick="like_unlike({{ post.id }}, this)"><i class="fas fa-heart fa-2x"></i></button>
-                                        <p class="subtitle">{{ post.caption }}</p>
-                                </div>
-                                {% endfor %}
+                                <button class="button m-2 {% if current_user not in post.user_liked %}is-dark{% else %}is-danger{% endif %} is-inverted" onclick="like_unlike({{ post.id }}, this)"><i class="fas fa-heart fa-2x"></i></button>
+                                <p class="subtitle">{{ post.caption }}</p>
                         </div>
-                        <div class="column is-one-quarter">
-                                <button class="button is-warning is-outlined is-medium is-fullwidth">Medium</button>
+                        {% endfor %}
+                </div>
+                <div class="column is-one-quarter">
+                        <div class="box">
+                                <p class="subtitle">{{ current_user.username }}</p>
                         </div>
                 </div>
         </div>
-</section>
-{% endblock body %}
-
+</div>
+{% endblock main %}
 {% block script %}
 {{ super() }}
         <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
