--- a/app/post/templates/new.html
+++ b/app/post/templates/new.html
@@ -1,23 +1,29 @@
-{% from 'macros/form.html' import render_form %}
-{% extends 'layout.html' %}
+{# from 'macros/form.html' import render_form #}
+{% extends 'main.html' %}
 
 {% block style %}
 {{ super() }}
         {{ dropzone.load_css() }}
-        {{ dropzone.style('border: 2px dashed #515BD4; margin: 10px 0 10px; min-height: 200px; width: 500px') }}
+        {{ dropzone.style('border: 2px dashed #515BD4; margin: 10px 0 10px; min-height: 200px; width: 500px; margin: auto') }}
 {% endblock style %}
 
-{% block body %}        
-<div class="container is-max-widescreen">
-        <h1 class="title">New Post Page</h1>
+{% block main %}        
+<div class="container is-max-desktop box">
+        <h1 class="title my-4 has-text-centered">Add A New Post</h1>
         <form action="{{ url_for('post.new') }}" enctype="multipart/form-data" method="post">
                 {{ form.hidden_tag() }}
                 {{ dropzone.create() }}
-            {{ render_form(form.caption, class_='input my-2', placeholder='Caption....') }}
-            {{ render_form(form.submit, class_='button is-success is-fullwidth') }}
+                <div class="columns m-5">
+                        <div class="column is-three-quarters">
+                                {{ render_form(form.caption, class_='input is-rounded is-success', placeholder='Caption....') }}
+                        </div>
+                        <div class="column">
+                                {{ render_form(form.submit, class_='button is-success px-6') }}
+                        </div>
+                </div>
         </form>
 </div>
-{% endblock body %}
+{% endblock main %}
 
 {% block script %}
 {{ super() }}
