Added functionality to Follow / Unfollow user and see followed user post

--- a/app/templates/macros/post.html
+++ b/app/templates/macros/post.html
@@ -80,10 +80,11 @@
                 </div>
         </article>
         {% endfor %}
-        {% endif %}
-        {% endif %}
+        {% else %}
         <a href="{{url_for('post.home', post_id=post.id) }}" class="mt-4">
                 <p class="has-text-info my-4">Show all comments</p>
         </a>
+        {% endif %}
+        {% endif %}
 </div>
 {% endmacro %}
