Fixed Followers Page

--- a/app/main/templates/index.html
+++ b/app/main/templates/index.html
@@ -14,7 +14,7 @@
                         {% endfor %}
                 </div>
                 <div class="column is-one-quarter">
-                        <div class="box">
+                        <div class="box" style="position: fixed;">
                                 <div class="columns">
                                         <div class="column is-one-third">
                                                 <figure class="image is-64x64 py-2">
@@ -22,7 +22,7 @@
                                                 </figure>
                                         </div>
                                         <div class="column">
-                                                <h1 class="title">{{ current_user.username }}</h1>
+                                                <h1 class="title mx-2">{{ current_user.username }}</h1>
                                         </div>
                                 </div>
                         </div>
