--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -3,7 +3,7 @@
         <head>
               <meta charset="utf-8">
                   <meta name="viewport" content="width=device-width, initial-scale=1">
-                      <title>Hello Bulma!</title>
+                      <title>Instagram Clone!</title>
                       <link rel="shortcut icon" type="image/jpg" href="{{ url_for('static', filename='images/favico/favicon.ico') }}"/>
                       {% block style %}
                           <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.1/css/bulma.min.css">
