--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -12,11 +12,23 @@
         </head>
 
         <body>
+        {% with messages =get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+            {% for category, message in messages %}
+            <div class="notification is-{{category}}">
+              <button class="delete"></button>
+                {{ message }}
+            </div>
+            {% endfor %}
+        </ul>
+        {% endif %}
+        {% endwith %}
+
                 {% block body%} {% endblock body %}
         </body>
-
         {% block script %}
             <script defer src="https://use.fontawesome.com/releases/v5.14.0/js/all.js"></script>
+            <script src="{{ url_for('main.static', filename='js/script.js') }}"></script>
         {% endblock script %}
 </html>
 
