Added a buch of flash messages

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -17,7 +17,9 @@
             {% for category, message in messages %}
             <div class="notification is-{{category}}">
               <button class="delete"></button>
-                {{ message }}
+              <p class="has-text-centered">
+              {{ message | safe}}
+              </p>
             </div>
             {% endfor %}
         </ul>
