--- a/app/templates/include/navbar.html
+++ b/app/templates/include/navbar.html
@@ -25,15 +25,28 @@
 
                         <!-- Right side -->
                         <div class="level-right">
-                            <a href="{{ url_for('main.home') }}" class="mx-2{% if request.endpoint.endswith('main.home') %} has-text-link-dark{% else %} has-text-grey-darker{% endif %}">
+                            <a href="{{ url_for('main.home') }}" class="navbar-item{% if request.endpoint.endswith('main.home') %} has-text-link-dark{% else %} has-text-grey-darker{% endif %}">
                                     <p class="level-item"><i class="fas fa-home"></i></p>
                             </a>
-                            <a href="{{ url_for('post.new') }}" class="mx-2{% if request.endpoint.endswith('post.new') %} has-text-link-dark{% else %} has-text-grey-darker{% endif %}">
+                            <a href="{{ url_for('post.new') }}" class="navbar-item{% if request.endpoint.endswith('post.new') %} has-text-link-dark{% else %} has-text-grey-darker{% endif %}">
                                         <p class="level-item"><i class="fas fa-plus-circle"></i></p>
                             </a>
-                            <a href="{{ url_for('user.home', username=current_user.username) }}" class="mx-2{% if request.endpoint.endswith('user.home') %} has-text-link-dark{% else %} has-text-grey-darker{% endif %}">
-                                    <p class="level-item"><i class="fas fa-user-circle"></i></p>
-                            </a>
+                            <div class="navbar-item has-dropdown is-hoverable">
+                                    <a class="navbar-item{% if request.endpoint.endswith('user.home') %} has-text-link-dark{% else %} has-text-grey-darker{% endif %}">
+                                            <p class="level-item"><i class="fas fa-user-circle"></i></p>
+                                    </a>
+                                    <div class="navbar-dropdown">
+                                            <a href="{{ url_for('user.home', username=current_user.username) }}" class="navbar-item{% if request.endpoint.endswith('user.home') %} has-text-link-dark{% else %} has-text-grey-darker{% endif %}">
+                                                    <p class="level-item">profile</p>
+                                            </a>
+                                            <a href="{{ url_for('user.confirm') }}" class="navbar-item{% if request.endpoint.endswith('user.home') %} has-text-link-dark{% else %} has-text-grey-darker{% endif %}">
+                                                    <p class="level-item">confirm</p>
+                                            </a>
+                                            <a href="{{ url_for('user.logout') }}" class="navbar-item{% if request.endpoint.endswith('user.home') %} has-text-link-dark{% else %} has-text-grey-darker{% endif %}">
+                                                    <p class="level-item">logout</p>
+                                            </a>
+                                    </div>
+                            <div>
                         </div>
                 </nav>
         </div>
